# Weather-CLI-

./: .gitignore  CMakeLists.txt  README.md  WeatherFetcher.hpp  apikey.txt  main  main.cpp  weatherFetcher.cpp  weatherFrame.cpp  weatherFrame.hpp
.cache/clangd/index/: WeatherFetcher.hpp.2F6325E339EF1388.idx  main.cpp.C0510A5C9A234EDF.idx  weatherFetcher.cpp.7F25ACEB76AFEBA7.idx  weatherFrame.cpp.6E4A0553E7ACDF36.idx  weatherFrame.hpp.045659A46493397D.idx
